FinalTask: update Analyzer with reachableElements and evalOrThrow